--- a/public/circle-illusion/index.html
+++ b/public/circle-illusion/index.html
@@ -1674,6 +1674,13 @@ Using <strong>LaTeX TikZ</strong>, we can mathematically recreate this visual ph
 <div class="related-container">
     <div class="related-item-container">
             <div class="related-image">
+                <a href="/parallel-lines/"><img   src='/parallel-lines/featured-image.png'   alt="This article discusses the circle illusion, where two identical central circles appear different in size due to surrounding visual context. Built with LaTeX TikZ, this article provides a complete explanation of the code structure and perceptual science behind it." height="200" width="400"></a>
+            </div><h2 class="related-title">
+                <a href="/parallel-lines/">The Café Wall Illusion: Straight Lines That Appear Curved</a>
+            </h2>
+        </div>
+    <div class="related-item-container">
+            <div class="related-image">
                 <a href="/white-dot-illusion/"><img   src='/white-dot-illusion/featured-image.png'   alt="This article discusses the circle illusion, where two identical central circles appear different in size due to surrounding visual context. Built with LaTeX TikZ, this article provides a complete explanation of the code structure and perceptual science behind it." height="200" width="400"></a>
             </div><h2 class="related-title">
                 <a href="/white-dot-illusion/">White Dot Illusion: Perceptual Contrast in a Dark Grid Pattern</a>
