--- a/public/optical-illusion/index.html
+++ b/public/optical-illusion/index.html
@@ -1329,6 +1329,13 @@ With TikZ, LaTeX becomes not only a scientific writing tool but also a <strong>c
 <div class="related-container">
     <div class="related-item-container">
             <div class="related-image">
+                <a href="/parallel-lines/"><img   src='/parallel-lines/featured-image.png'   alt="This article discusses the circle illusion formed from square arrangements using TikZ in LaTeX, along with the scientific explanation behind the visual perception phenomenon." height="200" width="400"></a>
+            </div><h2 class="related-title">
+                <a href="/parallel-lines/">The Café Wall Illusion: Straight Lines That Appear Curved</a>
+            </h2>
+        </div>
+    <div class="related-item-container">
+            <div class="related-image">
                 <a href="/white-dot-illusion/"><img   src='/white-dot-illusion/featured-image.png'   alt="This article discusses the circle illusion formed from square arrangements using TikZ in LaTeX, along with the scientific explanation behind the visual perception phenomenon." height="200" width="400"></a>
             </div><h2 class="related-title">
                 <a href="/white-dot-illusion/">White Dot Illusion: Perceptual Contrast in a Dark Grid Pattern</a>
