--- a/public/drawing-mandalas-with-latex/index.html
+++ b/public/drawing-mandalas-with-latex/index.html
@@ -1676,6 +1676,13 @@
 <div class="related-container">
     <div class="related-item-container">
             <div class="related-image">
+                <a href="/mosaic-from-pompeii/"><img   src='/mosaic-from-pompeii/featured-image.png'   alt="A complete guide to drawing mandalas using LaTeX TikZ — including full .tex source code and detailed line-by-line explanations." height="200" width="400"></a>
+            </div><h2 class="related-title">
+                <a href="/mosaic-from-pompeii/">Creating Pompeii Mosaic Patterns with LaTeX TikZ</a>
+            </h2>
+        </div>
+    <div class="related-item-container">
+            <div class="related-image">
                 <a href="/drawing-mandalas/"><img   src='/drawing-mandalas/featured-image.png'   alt="A complete guide to drawing mandalas using LaTeX TikZ — including full .tex source code and detailed line-by-line explanations." height="200" width="400"></a>
             </div><h2 class="related-title">
                 <a href="/drawing-mandalas/">Drawing a Mandala with the TikZ Package in LaTeX</a>
