--- a/public/id/drawing-mandalas-with-latex/index.html
+++ b/public/id/drawing-mandalas-with-latex/index.html
@@ -1676,6 +1676,13 @@
 <div class="related-container">
     <div class="related-item-container">
             <div class="related-image">
+                <a href="/id/mosaic-from-pompeii/"><img   src='/mosaic-from-pompeii/featured-image.png'   alt="Panduan lengkap menggambar mandala menggunakan LaTeX TikZ — menyertakan kode .tex lengkap dan penjelasan baris demi baris." height="200" width="400"></a>
+            </div><h2 class="related-title">
+                <a href="/id/mosaic-from-pompeii/">Membuat Pola Mosaik Pompeii dengan LaTeX TikZ</a>
+            </h2>
+        </div>
+    <div class="related-item-container">
+            <div class="related-image">
                 <a href="/id/drawing-mandalas/"><img   src='/drawing-mandalas/featured-image.png'   alt="Panduan lengkap menggambar mandala menggunakan LaTeX TikZ — menyertakan kode .tex lengkap dan penjelasan baris demi baris." height="200" width="400"></a>
             </div><h2 class="related-title">
                 <a href="/id/drawing-mandalas/">Menggambar Mandala dengan Paket TikZ di LaTeX</a>
