--- a/public/yin-yang-symbol/index.html
+++ b/public/yin-yang-symbol/index.html
@@ -1200,6 +1200,13 @@ Every curve and color embodies the harmony of science and spirituality.</p>
 <div class="related-container">
     <div class="related-item-container">
             <div class="related-image">
+                <a href="/mosaic-from-pompeii/"><img   src='/mosaic-from-pompeii/featured-image.png'   alt="This article discusses the philosophy and mathematical structure of the Yin-Yang symbol and demonstrates how to draw it precisely and beautifully using LaTeX TikZ." height="200" width="400"></a>
+            </div><h2 class="related-title">
+                <a href="/mosaic-from-pompeii/">Creating Pompeii Mosaic Patterns with LaTeX TikZ</a>
+            </h2>
+        </div>
+    <div class="related-item-container">
+            <div class="related-image">
                 <a href="/drawing-mandalas/"><img   src='/drawing-mandalas/featured-image.png'   alt="This article discusses the philosophy and mathematical structure of the Yin-Yang symbol and demonstrates how to draw it precisely and beautifully using LaTeX TikZ." height="200" width="400"></a>
             </div><h2 class="related-title">
                 <a href="/drawing-mandalas/">Drawing a Mandala with the TikZ Package in LaTeX</a>
